# kawasakikeiba

./: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  render.yaml  run.py
.claude/: settings.local.json
_archived_kawasaki_ai/: cli.py  config.py  paths.py
_archived_kawasaki_ai/gate/: reason_codes.py  rules.py
_archived_kawasaki_ai/integration/: decision.py  score_normalization.py
_archived_kawasaki_ai/utils/: logging.py  schema.py  validation.py
_archived_kawasaki_ai/video/: comment_templates.py  race_tags.py  recurrence.py  selection.py
data/raw/: sample_races.json
docs/: assumptions_and_limits.md  cli_spec.md  data_dictionary.md  module_responsibilities.md  phase1_design.md
scripts/: generate_data.py
src/kawasaki_keiba/: __init__.py  config.py  paths.py
src/kawasaki_keiba/api/: config.py  main.py
src/kawasaki_keiba/cli/: __init__.py  main.py
src/kawasaki_keiba/core/: __init__.py  baseline.py  bias_table.py  market.py  scoring.py
src/kawasaki_keiba/data/: loader.py
src/kawasaki_keiba/data_quality/: __init__.py  leakage_guard.py  validators.py
src/kawasaki_keiba/gate/: __init__.py  decision.py  reason_codes.py  rules.py
src/kawasaki_keiba/integration/: __init__.py  decision.py  score_normalization.py
src/kawasaki_keiba/monitoring/: logger.py  (+2 more)
tests/: test_core.py  test_data_quality.py  test_gate.py  test_gate_decision.py  test_historical_bias.py  test_integration.py  test_loader.py  test_monitoring.py  test_race_video.py  test_schemas.py  test_scoring.py  test_shrinkage_baseline.py  test_track_bias.py  test_wind.py
web/: index.html
(+20 files in other folders)
