[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kawasaki-keiba"
version = "0.1.0"
description = "川崎競馬限定 意思決定AIシステム"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "lightgbm>=4.1",
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
kawasaki = "kawasaki_keiba.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
